--- a/templates/op_cards.html
+++ b/templates/op_cards.html
@@ -172,13 +172,13 @@
             <a class="nav-link" href="{{url_for('pedidos')}}">Abrir Pedido</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Faturados</a>
+            <a class="nav-link" href="{{url_for('pedidos_faturados')}}">Faturados</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Ferramentas</a>
+            <a class="nav-link" href="{{url_for('ferramentas')}}">Ferramentas</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Estoque</a>
+            <a class="nav-link" href="{{url_for('estoque_cobre')}}">Estoque</a>
         </li>
     </ul>
     <div class="usuario">
